# dustats_rca_project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  pyproject.toml  rca_agent.py  scratchpad.py
.github/workflows/: register_model.yml
logger/: logger.py
src/components/: ingestion.py  model.py  model_trainer.py  model_wrapper.py  transformation.py  validation.py
src/pipelines/: inference_pipeline.py  training_pipeline.py
templates/: index.html
utils/: utils.py
