[project]
name = "dustats-rca-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sql-connector[pyarrow]>=4.2.6",
    "numpy<2.0",
    "pandas<2.3",
    "pyaml>=26.2.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch<2.3",
    "tqdm>=4.67.3",
]
