[project]
name = "dustats-rca-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sql-connector[pyarrow]>=4.2.6",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "mlflow[databricks]>=3.11.1",
    "numpy<2.0",
    "openai>=1.0.0",
    "pandas<2.3",
    "pyaml>=26.2.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "boto3>=1.42.97",
    "langchain>=1.3.1",
]

[project.optional-dependencies]
cpu = [
    "torch<2.3",
]
gpu = [
    "torch<2.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
